2008-10-30  Joel Brobecker  <brobecker@adacore.com>

	* breakpoint.h (enum bptype): Delete bp_catch_exec.
	* breakpoint.c (insert_catchpoint): Remove handling for
	bp_catch_exec breakpoint kinds.
	(insert_bp_location, update_breakpoints_after_exec, remove_breakpoint)
	(ep_is_catchpoint, print_it_typical, bpstat_check_location),
	(bpstat_check_location, bpstat_what, print_one_breakpoint_location)
	(print_one_breakpoint_location, user_settable_breakpoint)
	(breakpoint_address_is_meaningful, adjust_breakpoint_address)
	(allocate_bp_location, mention, breakpoint_re_set_one)
	(disable_command, enable_command): Likewise.
	(create_exec_event_catchpoint): Delete.
	(insert_catch_exec, remove_catch_exec, breakpoint_hit_catch_exec)
	(print_it_catch_exec, print_one_catch_exec, print_mention_catch_exec):
	New functions.
	(catch_exec_breakpoint_ops): New static global.
	(catch_exec_command_1): Use create_catchpoint instead of
	create_exec_event_catchpoint to create the exec catchpoint.

2008-10-28  Tom Tromey  <tromey@redhat.com>

	* Makefile.in (SUBDIR_CLI_OBS): Don't mention cli-utils.o.
	(SUBDIR_CLI_DEPS): Don't mention cli-utils.c.
	(HFILES_NO_SRCDIR): Don't mention cli-utils.h.
	(cli-utils.o): Remove.
	* cli/cli-utils.c: Remove.
	* cli/cli-utils.h: Remove.

2008-10-28  Tom Tromey  <tromey@redhat.com>

	* varobj.c (value_get_print_value): Include valprint.h.
	(value_get_print_value): Use get_formatted_print_options.
	* value.h (struct value_print_options): Declare.
	(value_print, val_print, common_val_print, val_print_string):
	Update.
	* value.c: Include valprint.h.
	(show_values): Use get_user_print_options.
	(show_convenience): Likewise.
	* valprint.h (prettyprint_arrays, prettyprint_structs): Don't
	declare.
	(struct value_print_options): New type.
	(vtblprint, unionprint, addressprint, objectprint, print_max,
	inspect_it, repeat_count_threshold, output_format,
	stop_print_at_null): Don't declare.
	(user_print_options, get_user_print_options,